Cambios es esquemas DB, reorganizacion de urls y reasignacion de perfiles y refactor general

--- a/public/stylus/OOCSS.styl
+++ b/public/stylus/OOCSS.styl
@@ -12,5 +12,9 @@ baseYellow = #FBBC05
 	display flex
 	justify-content flex-end
 
+.alignItemsCenter
+	display flex
+	justify-content center
+
 .overflowHidden
 	overflow hidden
