--- a/views/templatesStatistics/evolution.jade
+++ b/views/templatesStatistics/evolution.jade
@@ -1,5 +1,5 @@
 template.optionsStatistic
-	form.form.formLabelInput#rangeDate
+	form.form.formLabelInput#evolution
 		article.inputContainer
 			label.label(for='children') Niñ@
 			select(type='date', name='children' id='children' required)
@@ -19,5 +19,5 @@ template.optionsStatistic
 		document.querySelector('#dateInit').value = currentTime.getValueInput('y-m-d')
 		document.querySelector('#dateEnd').value = currentTime.getValueInput('y-m-d')
 template.resultStatistics
-	section#chartRangeDate
+	section#chartEvolution
 
