--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?2pn4dv');
-    src:    url('fonts/icomoon.eot?2pn4dv#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?2pn4dv') format('truetype'),
-        url('fonts/icomoon.woff?2pn4dv') format('woff'),
-        url('fonts/icomoon.svg?2pn4dv#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?mv4085');
+    src:    url('fonts/icomoon.eot?mv4085#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?mv4085') format('truetype'),
+        url('fonts/icomoon.woff?mv4085') format('woff'),
+        url('fonts/icomoon.svg?mv4085#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,8 +24,14 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-statitics-bars:before {
+    content: "\e910";
+}
 .icon-statitics-pie:before {
-    content: "\e90f";
+    content: "\e911";
+}
+.icon-statitics-area:before {
+    content: "\e912";
 }
 .icon-check-in:before {
     content: "\e90c";
@@ -66,10 +72,10 @@
 .icon-logout:before {
     content: "\e90b";
 }
-.icon-statitics-bars:before {
-    content: "\e90d";
-}
 .icon-statitics-list:before {
     content: "\e90e";
+}
+.icon-notification:before {
+    content: "\e90d";
 }
 
