--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -15,14 +15,20 @@ body
 header
 	color white !important
 	margin-bottom 20px
+	.nameApp
+		margin 0
+		padding 10px 0
+		text-align center
+		> *
+			text-decoration none
+			color inherit
 	nav
-		align-items center
-		display flex
-		justify-content space-between
 		a
 			color inherit
 			text-decoration none
 		.itemsNavs
+			display flex
+			justify-content space-between
 			.item
 				display inline-block
 				font-size 2rem
@@ -184,7 +190,7 @@ header
 	background-color white
 	bottom 0px
 	box-shadow 0 10px 30px rgba(0,0,0,1)
-	padding 20px 0
+	padding-top 20px
 	position fixed
 	width 100%
 /*Estadisticas*/
