--- a/views/children/messages.jade
+++ b/views/children/messages.jade
@@ -1,4 +1,4 @@
-extends ../templates/templateAppChildren.jade
+extends ../templates/templateApp.jade
 
 block title
 	title Mensajes
@@ -10,13 +10,13 @@ block content
 	section.messages
 		each message in messages
 			if message.type == 0
-				- var classCss = "correct"
+				- var classCss = 'correct'
 			else if message.type == 1
-				- var classCss = "warning"
+				- var classCss = 'warning'
 			else if message.type == 2
-				- var classCss = "incorrect"
-			article.message(class="#{classCss}" data-speech="#{message.text}")
+				- var classCss = 'incorrect'
+			article.message(class='#{classCss}' data-speech='#{message.text}')
 				p.title #{message.text}
 
 block script
-	script(src="/js/messages.js")
+	script(src='/js/messages.js')
