Añadiendo soporte para imagenes en los usuarios y refactor de Fronted de Authenticacion

--- a/public/stylus/OOCSS.styl
+++ b/public/stylus/OOCSS.styl
@@ -5,6 +5,12 @@ basePurple = #9C27b0
 baseRed = #EA4235
 baseYellow = #FBBC05
 
+[data-hidden="true"]
+	display none !important
+
+[data-hidden="false"]
+	display block !important
+
 .contentWidth
 	transition 1s all linear
 
