--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -22,6 +22,16 @@ header
 		> *
 			text-decoration none
 			color inherit
+	.wellcome
+		display flex
+		justify-content center
+		align-items center
+		font-size 1.5rem
+	.photoUser
+		width 100px
+		border-radius 50%
+		margin 0 10px
+
 	nav
 		a
 			color inherit
@@ -38,12 +48,30 @@ header
 					margin-right 0px
 	.titleSection
 		box-shadow 0 10px 30px rgba(0,0,0,0.3)
-		font-size 4rem
+		font-size 3rem
 		padding 30px 0
 		padding-left 20px
 		> *
 			margin 0
 /*Header: Menu y Titulo de la seccion*/
+
+/*Autenticacion*/
+.formAuthenticate
+	.userPhoto
+		display block
+		margin 0 auto
+		width 200px
+		border-radius 50%
+		margin-bottom 20px
+	.userUsername
+		text-align center
+		font-size 1.5rem
+	.backContinue
+		cursor pointer
+		font-size 3rem
+		margin 0
+
+/*Autenticacion*/
 
 /*Acvtividades*/
 .activities
