--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?mv4085');
-    src:    url('fonts/icomoon.eot?mv4085#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?mv4085') format('truetype'),
-        url('fonts/icomoon.woff?mv4085') format('woff'),
-        url('fonts/icomoon.svg?mv4085#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?nrl0mu');
+    src:    url('fonts/icomoon.eot?nrl0mu#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?nrl0mu') format('truetype'),
+        url('fonts/icomoon.woff?nrl0mu') format('woff'),
+        url('fonts/icomoon.svg?nrl0mu#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,6 +24,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-back:before {
+    content: "\e90f";
+}
 .icon-statitics-bars:before {
     content: "\e910";
 }
