Removiendo seccion de mensajes y refactorizando manejo de estado una actividad (agregando metodo a los esquemas)

--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?nrl0mu');
-    src:    url('fonts/icomoon.eot?nrl0mu#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?nrl0mu') format('truetype'),
-        url('fonts/icomoon.woff?nrl0mu') format('woff'),
-        url('fonts/icomoon.svg?nrl0mu#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?z8nmb9');
+    src:    url('fonts/icomoon.eot?z8nmb9#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?z8nmb9') format('truetype'),
+        url('fonts/icomoon.woff?z8nmb9') format('woff'),
+        url('fonts/icomoon.svg?z8nmb9#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -80,5 +80,11 @@
 }
 .icon-notification:before {
     content: "\e90d";
+}
+.icon-incorrect:before {
+    content: "\e913";
+}
+.icon-correct:before {
+    content: "\e914";
 }
 
