--- a/views/templatesStatistics/today.jade
+++ b/views/templatesStatistics/today.jade
@@ -1,5 +1,6 @@
 template.optionsStatistic
-	form.form.formLabelInput#today
+	form.form.formLabelInput.formOptionsStatistics#today
+		span.icon-incorrect.close#closeOptionsStatistic
 		article.inputContainer
 			label.label(for='children') Niñ@
 			select(type='date', name='children' id='children' required)
