--- a/public/stylus/lib/modal.styl
+++ b/public/stylus/lib/modal.styl
@@ -21,17 +21,17 @@
 		z-index 100
 		.titleModal
 			border-bottom 1px solid gray
-			height 8%
+			height 80px
 			text-align right
 			width 100%
 		.bodyModal
 			border none
-			height calc(80% - 10px)
+			height calc(100% - 160px)
 			overflow: auto;
 			padding 10px
 			width 100%
 		.footerModal
-			height 8%
+			height 80px
 			width 100%
 			.backPage
 				cursor pointer
