--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -140,10 +140,10 @@ header
 				background-color rgb(52, 168, 83)
 				background-image url('/images/reminders/complete.png')
 				border-bottom 10px solid rgba(0,0,0,0.3)
-		[data-statereminder="incomplete"]
+		[data-statereminder="warning"]
 			.titleReminder
-				background-color rgb(236, 69, 89)
-				background-image url('/images/reminders/incomplete.png')
+				background-color rgb(251, 188, 5)
+				background-image url('/images/reminders/warning.png')
 				border-bottom 10px solid rgba(0,0,0,0.3)
 		[data-statereminder="inprocess"]
 			.titleReminder
@@ -218,9 +218,19 @@ header
 	background-color white
 	bottom 0px
 	box-shadow 0 10px 30px rgba(0,0,0,1)
-	padding-top 20px
 	position fixed
 	width 100%
+
+.formOptionsStatistics
+	padding-top 20px
+	.close
+		display flex
+		align-items flex-end
+		justify-content flex-end
+		margin-right 24px
+		color baseRed
+		cursor pointer
+
 /*Estadisticas*/
 
 .errors
