Refactor general y documentacion

--- a/views/children/activities.jade
+++ b/views/children/activities.jade
@@ -46,5 +46,5 @@ block content
 					span.icon-
 		script(src='/js/confirmActivity.js')
 
-block script
+block scripts
 	script(src='/js/activities.js')
