--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -33,7 +33,7 @@ block content
 			include ../templatesStatistics/rangeDates.jade
 
 	section.containerOptionsStatistic
-block script
+block scripts
 	script(type='text/javascript' src='https://www.gstatic.com/charts/loader.js')
 	script(src='/js/statistic.js')
 
