--- a/views/templates/templateApp.jade
+++ b/views/templates/templateApp.jade
@@ -22,8 +22,8 @@ block template
 			section.titleSection
 				block titleSection
 		block content
+	script(src='/js/lib/markdown.js')
 	script(src='/js/speech.js')
 	script(src='/js/utilities.js')
-	script(src='/js/lib/markdown.min.js')
+	block scripts
 
-	block script
