--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -36,6 +36,8 @@
 		input, select
 			width 70%
 			margin 0 auto
+		input[type="submit"],input[type="button"]
+			width auto !important
 		.label
 			width 70%
 	&OnlyInput
