--- a/public/stylus/lib/modal.styl
+++ b/public/stylus/lib/modal.styl
@@ -24,11 +24,12 @@
 			height 80px
 			text-align right
 			width 100%
+			box-sizing border-box
 		.bodyModal
 			border none
 			height calc(100% - 160px)
 			overflow: auto;
-			padding 10px
+			padding 0 10px
 			width 100%
 		.footerModal
 			height 80px
