--- a/views/templates/template.jade
+++ b/views/templates/template.jade
@@ -12,6 +12,8 @@ block template
 							span.icon-children(tooltip='Niños')
 						a.item(href='/management/statistics')
 							span.icon-family(tooltip='Padres')
+						a.item(href='/admin/collections')
+							span.icon-(tooltip='Administradores')
 						a.item(href='/logout')
 							span.icon-logout(tooltip='Cerrar Sesión')
 					else
