--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -1,4 +1,6 @@
 @import 'normalize'
+@import url("https://fonts.googleapis.com/css?family=Lato")
+
 @import 'OOCSS'
 @import 'lib/modal'
 @import 'lib/notifications'
@@ -6,7 +8,6 @@
 @import 'lib/forms'
 
 @import 'icomoon/style'
-@import url(https://fonts.googleapis.com/css?family=Lato)
 
 body
 	font-family: 'Lato', sans-serif
@@ -38,7 +39,7 @@ header
 			text-decoration none
 		.itemsNavs
 			display flex
-			justify-content space-between
+			justify-content space-around
 			.item
 				display inline-block
 				font-size 2rem
@@ -219,3 +220,5 @@ header
 	background-color baseRed
 .styleYellow
 	background-color baseYellow
+
+@import 'media'
