--- a/views/partials/menuAdmin.jade
+++ b/views/partials/menuAdmin.jade
@@ -1,6 +1,6 @@
 a.item(href='/admin/check-in')
 	span.icon-check-in(tooltip='Registro')
 a.item(href='/admin/collections')
-	span.icon-database(tooltip='Collecione')
+	span.icon-database(tooltip='Colecciones')
 a.item(href='/logout')
 	span.icon-logout(tooltip='Cerrar Sesion')
