--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -15,18 +15,17 @@ block modal
 block content
 	section.statistics
 		article.statistic.statisticToday(data-statistic='today')
-			h2 Hoy
-			span.icon-statitics-list
+			h2 #[span.icon-statitics-list] Hoy
+
 			p Listado de las actividades completadas de un niñ@ en el dia actual.
 			include ../templatesStatistics/today.jade
-		article.statistic.statisticsEvolution(data-statistic='evolution')
-			h2 Evolución
-			span.icon-statitics-area
+		article.statistic.statisticEvolution(data-statistic='evolution')
+			h2 #[span.icon-statitics-area] Evolución
+
 			p Grafica de Area. Relacion  de Actidades completadas/incompletadas en un rango de fecha determinado.
 			include ../templatesStatistics/evolution.jade
-		article.statistic.statisticsRangeDates(data-statistic='rangeDate')
-			h2 Rango De Fechas
-			span.icon-statitics-bars
+		article.statistic.statisticRangeDates(data-statistic='rangeDate')
+			h2 #[span.icon-statitics-bars] Rango De Fechas
 			p Grafica de Barras comparativa. Actidades completadas/incompletadas en un rango de fecha determinado.
 			include ../templatesStatistics/rangeDates.jade
 
