--- a/views/templates/template.jade
+++ b/views/templates/template.jade
@@ -13,7 +13,7 @@ block template
 						a.item(href='/management/statistics')
 							span.icon-family(tooltip='Padres')
 						a.item(href='/admin/collections')
-							span.icon-(tooltip='Administradores')
+							span.icon-admin(tooltip='Administradores')
 						a.item(href='/logout')
 							span.icon-logout(tooltip='Cerrar Sesión')
 					else
