--- a/views/templatesStatistics/rangeDates.jade
+++ b/views/templatesStatistics/rangeDates.jade
@@ -1,6 +1,7 @@
 template.optionsStatistic
 	form.form.formLabelInput.formOptionsStatistics#rangeDate
 		span.icon-incorrect.close#closeOptionsStatistic
+		h2 Rango De Fechas
 		article.inputContainer
 			label.label(for='children') Niñ@
 			select(type='date', name='children' id='children' required)
