--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?z8nmb9');
-    src:    url('fonts/icomoon.eot?z8nmb9#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?z8nmb9') format('truetype'),
-        url('fonts/icomoon.woff?z8nmb9') format('woff'),
-        url('fonts/icomoon.svg?z8nmb9#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?4tq5w');
+    src:    url('fonts/icomoon.eot?4tq5w#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?4tq5w') format('truetype'),
+        url('fonts/icomoon.woff?4tq5w') format('woff'),
+        url('fonts/icomoon.svg?4tq5w#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,8 +24,8 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-back:before {
-    content: "\e90f";
+.icon-admin:before {
+    content: "\e915";
 }
 .icon-statitics-bars:before {
     content: "\e910";
@@ -47,6 +47,9 @@
 }
 .icon-timeline:before {
     content: "\e900";
+}
+.icon-back:before {
+    content: "\e90f";
 }
 .icon-question:before {
     content: "\e907";
