--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -42,8 +42,9 @@
 			width 70%
 	&OnlyInput
 		input, select
+			transition all 2s linear
 			margin 0 auto
-			width 50%
+			width 90%
 .fieldset
 	margin 20px 0
 	border-radius 3px
@@ -51,4 +52,10 @@
 		font-weight bold
 		border-left 1px solid gray
 		padding 0 10px
+
+@media screen and (min-width: 768px)
+	.form
+		&OnlyInput
+			input, select
+				width 50%
 
