--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -478,8 +478,8 @@ th {
 }
 @font-face {
   font-family: 'icomoon';
-  src: url("fonts/icomoon.eot?4tq5w");
-  src: url("fonts/icomoon.eot?4tq5w#iefix") format('embedded-opentype'), url("fonts/icomoon.ttf?4tq5w") format('truetype'), url("fonts/icomoon.woff?4tq5w") format('woff'), url("fonts/icomoon.svg?4tq5w#icomoon") format('svg');
+  src: url("fonts/icomoon.eot?8ibmm1");
+  src: url("fonts/icomoon.eot?8ibmm1#iefix") format('embedded-opentype'), url("fonts/icomoon.ttf?8ibmm1") format('truetype'), url("fonts/icomoon.woff?8ibmm1") format('woff'), url("fonts/icomoon.svg?8ibmm1#icomoon") format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -562,6 +562,9 @@ th {
 }
 .icon-correct:before {
   content: "\e914";
+}
+.icon-user:before {
+  content: "\e916";
 }
 body {
   font-family: 'Lato', sans-serif;
