Añadiendo soporte a envio de correos, recuperacion de contraseña

--- a/views/users/authenticate.jade
+++ b/views/users/authenticate.jade
@@ -23,6 +23,7 @@ block content
 			article.inputContainer.alignItemsCenter
 				button.btn.btnSuccess(type='submit')
 					span Ingresar
+		a(href="/remember") Has Olvidado algo?
 	script(src='/js/lib/markdown.min.js')
 	script(src='/js/utilities.js')
 	script(src='/js/authenticate.js')
