--- a/views/users/checkIn.jade
+++ b/views/users/checkIn.jade
@@ -42,6 +42,8 @@ block content
 				article.inputContainer
 					input(type='text' name='usernameParent' id='usernameParent' placeholder='Usuario' required)
 				article.inputContainer
+					input(type='email' placeholder="Correo Electronico" name='email' id='email' )
+				article.inputContainer
 					input(type='file' accept='image/*' name='photoParent' id='photoParent' )
 				article.inputContainer
 					input(type='password' name='passwordParent' id='passwordParent' placeholder='Contraseña' required)
