Añadiando Configuracion para formularios de edicion y creacion de documentos de la DB y añadiendo validacion de dimension de imagenes de actividades

--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -30,6 +30,7 @@
 		padding 3px
 		&:focus
 			box-shadow 0px 0px 11px 0px rgba(0,0,0,0.1)
+		&[readOnly]
 		&:disabled
 			background rgba(0,0,0,0.1)
 	&LabelInput
