--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -439,6 +439,8 @@ th {
 .form select:focus {
   box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.1);
 }
+.form input[readOnly],
+.form select[readOnly],
 .form input:disabled,
 .form select:disabled {
   background: rgba(0,0,0,0.1);
