--- a/views/users/perfil.jade
+++ b/views/users/perfil.jade
@@ -7,8 +7,8 @@ block titleSection
 
 block content
 	form#dataAssociated.form.formOnlyInput(action='' method='POST')
-		fieldset
-			legend Mi Información
+		fieldset.fieldset
+			legend.legend Mi Información
 
 			article.inputContainer
 				input(type='number' name='idFamily' id='idFamily' value="#{associated.id}" placeholder='Identificación Familiar' required)
@@ -18,8 +18,6 @@ block content
 				legend.legend Usuario
 				article.inputContainer
 					input(type='text' name='usernameParent' id='usernameParent' value="#{associated.user.username}" placeholder='Usuario' required)
-				//article.inputContainer
-					input(type='file' accept='image/*' name='photoParent' id='photoParent' )
 				article.inputContainer
 					input(type='password' name='passwordParent' id='passwordParent' value="#{associated.user.password}" placeholder='Contraseña' required)
 
@@ -29,11 +27,13 @@ block content
 					li #{children.name}
 
 	form#changePassword.form.formOnlyInput(action='/user/changePassword' method='POST')
-		fieldset
-			legend Cambiar Contraseña
+		fieldset.fieldset
+			legend.legend Cambiar Contraseña
 			input(type="hidden" name='user' value='#{user._id}')
 			article.inputContainer
-				input(type='password', name='newPassword', placeholder='Nueva Contraseña', autofocus required)
+				input(type='password', name='currentPassword', placeholder='Contraseña Actual', autofocus required)
+			article.inputContainer
+				input(type='password', name='newPassword', placeholder='Nueva Contraseña', required)
 			article.inputContainer
 				input(type='password', name='confirmNewPassword', placeholder='Repetir Contraseña', autofocus required)
 			article.inputContainer.alignItemsCenter
@@ -41,15 +41,17 @@ block content
 					span Cambiar
 
 	form#changePasswordChildren.form.formOnlyInput(action='/user/changePassword' method='POST')
-		fieldset
-			legend Cambiar Contraseña niñ@
+		fieldset.fieldset
+			legend.legend Cambiar Contraseña niñ@
 			article.inputContainer
 				label.label(for='user') Niñ@
 				select(type='date', name='user' id='user' required)
 					for children in associated.children
 						option(value='#{children.user}') #{children.name}
 			article.inputContainer
-				input(type='password', name='newPassword', placeholder='Nueva Contraseña', autofocus required)
+				input(type='password', name='currentPassword', placeholder='Contraseña Actual', autofocus required)
+			article.inputContainer
+				input(type='password', name='newPassword', placeholder='Nueva Contraseña', required)
 			article.inputContainer
 				input(type='password', name='confirmNewPassword', placeholder='Repetir Contraseña', autofocus required)
 			article.inputContainer.alignItemsCenter
